--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,10 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
+    id 'androidx.navigation.safeargs'
+    id 'kotlinx-serialization'
 }
 
 android {
@@ -42,7 +46,69 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    testImplementation 'junit:junit:4 .+'
+//    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$versions.kotlin"
+
+    // Koin
+    implementation "org.koin:koin-android-viewmodel:$versions.koin"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
+
+    //Network
+    implementation "com.squareup.retrofit2:retrofit:$versions.retrofit"
+    implementation "com.squareup.retrofit2:converter-moshi:$versions.retrofit"
+    implementation 'com.squareup.moshi:moshi-adapters:1.12.0'
+    implementation "com.squareup.retrofit2:converter-gson:$versions.retrofit"
+
+//Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutines"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$versions.coroutines_adapter"
+
+    //Multidex
+    implementation "androidx.multidex:multidex:$versions.multidex"
+
+    // OkHttpProfiler
+    implementation "com.itkacher.okhttpprofiler:okhttpprofiler:$versions.okhttpprofiler"
+
+    // Jetpack Compose Integration
+//    def paging_version = '3.1.0'
+//    implementation("androidx.paging:paging-runtime-ktx:$paging_version") {
+//        exclude group: "org.jetbrains.kotlinx", module: "kotlinx-coroutines-core-jvm"
+//    }
+
+    def kotlin_coroutinesVersion = "1.5.2"
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutinesVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutinesVersion"
+
+    // Databinding
+    kapt 'com.android.databinding:compiler:3.1.4'
+
+    //---------------------------- TESTING ----------------------------//
+
+    androidTestImplementation "androidx.test.ext:junit:$versions.junit_x_ext"
+    androidTestImplementation "androidx.test:rules:$versions.testx_rules"
+
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
+    androidTestImplementation "androidx.test.ext:truth:$versions.truthVersion"
+    androidTestImplementation 'androidx.test:rules:1.4.0'
+
+    testImplementation "android.arch.core:core-testing:$versions.android_arch_core_testing"
+    testImplementation "com.squareup.okhttp3:mockwebserver:$versions.mockwebserver_version"
+
+    testImplementation "io.mockk:mockk:$versions.mockk"
+    testImplementation "androidx.test.ext:truth:$versions.truthVersion"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$versions.coroutines"
+
+
+    implementation("androidx.room:room-runtime:$versions.room_version")
+    kapt("androidx.room:room-compiler:$versions.room_version")
+    implementation("androidx.room:room-ktx:$versions.room_version")
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 }
