--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,33 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext {
+        versions = [
+                navigation               : '2.3.5',
+                kotlin                   : '1.4.10',
+                gradle                   : '4.0.2',
+                app_compat               : '1.2.0',
+                koin                     : '2.0.1',
+                material_design          : '1.5.0',
+                retrofit                 : '2.6.0',
+                core_ktx                 : '1.7.0',
+                constraint_layout        : '2.1.3',
+                coroutines               : '1.4.3',
+                multidex                 : '2.0.1',
+                coroutines_adapter       : '0.9.2',
+                mockwebserver_version    : '4.1.0',
+                recycler_view_version    : '1.1.0',
+                room_version             : '2.3.0',
+                glide                    : '4.12.0',
+
+                //testing libraries
+                junit_x_ext              : '1.1.2',
+                testx_rules              : '1.3.0',
+                android_arch_core_testing: '1.1.1',
+                mockk                    : '1.9.3',
+                truthVersion             : '1.2.0',
+                okhttpprofiler           : '1.0.7'
+        ]
+    }
     repositories {
         google()
         mavenCentral()
@@ -7,6 +35,8 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$versions.kotlin"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$versions.navigation"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
