--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,10 +9,11 @@ plugins {
 
 android {
     compileSdk 31
+    buildToolsVersion '30.0.3'
 
     defaultConfig {
         applicationId "com.example.flickraiexemple"
-        minSdk 21
+        minSdk 23
         targetSdk 31
         versionCode 1
         versionName "1.0"
@@ -21,6 +22,9 @@ android {
     }
 
     buildTypes {
+        debug {
+            buildConfigField "String", "BASE_URL", "\"https://api.flickr.com/services/rest/\""
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -34,7 +38,7 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
-        viewBinding true
+        dataBinding = true
     }
 }
 
@@ -46,6 +50,13 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
+    implementation 'androidx.paging:paging-common-ktx:3.1.0'
+    implementation 'androidx.paging:paging-runtime-ktx:3.1.0'
+    implementation 'androidx.databinding:databinding-runtime:7.1.2'
+
+    // Databinding
+    kapt 'com.android.databinding:compiler:3.1.4'
+
     testImplementation 'junit:junit:4 .+'
 //    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 //    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
